[package]
name = "docker-registry-actions"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
result = { path = "./crates/result" }
tokio = { version = "1", features = ["full"] }
http-tokio = { path = "./crates/http-tokio" }
clap = { version = "4.5.20", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
docker-compose-types = "0.15.0"
